<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app">Android Labs</string>
    <string name="textView">Enter your email address</string>
    <string name="edit1">Type email here</string>
    <string name="textView2">Type your password: </string>
    <string name="button_login">Login</string>
    <string name="textView3">Your Profile </string>
    <string name="textView4">Your Name: </string>
    <string name="editTextTextPersonName">Enter your name </string>
    <string name="textView5">Your email: </string>
    <string name="editTextTextPersonName2">Enter your Email </string>
    <string name="textView6">Your picture: </string>
    <string name="textView7">Click the button above to take a picture </string>
    <string name="send_button">Send</string>
    <string name="receive_button">Receive</string>
    <string name="chat_type">Type Here</string>
    <string name="button_profile">Go to chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GoToToolbar">Go to Toolbar</string>
    <string name="GoToWeather">Go to Weather</string>
</resources>