<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/textView3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textPersonName"
            android:text="@string/editTextTextPersonName"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/textView5"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/editTextTextPersonName2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="368dp"
            android:layout_height="39dp"
            android:text="@string/textView6"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:src="@android:drawable/picture_frame"
            tools:ignore="InvalidId,MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/textView7" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>